# change-quality-agent

./: .env.example  .gitignore  AGENTS.md  DESIGN.md  LICENSE  Makefile  README.md  TODO.md  config.yaml  main.py  pyproject.toml  review.md
agent/: graph.py  react_runtime.py  state.py
agent/sop_quality/: __init__.py  graph.py  state.py
api/: openapi.yml  sop-runs.md
app/: main.py
app/agent/: __init__.py
app/agents/: __init__.py
app/api/: auth.py  deps.py
app/core/: agent_runtime.py  agent_streaming.py  checkpoints.py  config.py  create_agent_by_llm_provider.py  create_deepagents_by_llm_provider.py  database.py  json_types.py  llm_connectivity.py  llm_model_config.py  llm_models.py  llm_provider_types.py  llm_tokens.py  logging.py  security.py  stream_events.py
app/models/: __init__.py  agents.py  llm_providers.py  mcp.py  provider_credentials.py  runs.py  sessions.py  sop_quality_checks.py  users.py
app/repositories/: __init__.py  agents.py  llm_providers.py  mcp_servers.py  provider_credentials.py  runs.py  sessions.py  sop_quality_checks.py  users.py
app/schemas/: __init__.py  agents.py  llm_providers.py  mcp.py  runs.py  sessions.py  sop.py  sop_quality_checks.py  users.py
app/services/: agent_capabilities.py  agent_runs.py  agents.py  auth.py  llm_providers.py  mcp_runtime.py  mcp_servers.py  provider_credentials.py  run_events.py  session_messages.py  session_streaming.py  sessions.py  sop_client.py  sop_quality.py  sop_quality_runner.py  sop_quality_streaming.py
app/tools/: __init__.py  builtin.py
docs/: agent-crud-feature.md  auth.md  frontend.md  llm-provider-capabilities.md  mcp-crud.md  streaming.md
docs/plans/: 2026-05-25-langgraph-streaming-frontend-design.md  2026-05-26-logging-design.md  (+29 more)
frontend/: .npmrc  README.md  index.html  package-lock.json  package.json  vite.config.ts
migrations/: env.py
scripts/: check_any_usage.py  mcp_http_echo_server.py  seed_mock_runs.py  smoke_all_history.mjs  smoke_chat_thread.mjs  smoke_deepseek_agent.mjs  smoke_e2e.mjs  smoke_screenshot.mjs  smoke_start_run.mjs  smoke_zh_ui.mjs
tests/: conftest.py  test_admin_llm_providers_api.py  test_agent_capabilities.py  test_agent_factory.py  test_agent_models.py  test_agent_repository.py  test_agent_runs.py  test_agent_runtime.py  test_agent_schemas.py  test_agent_service.py  test_agent_streaming.py  test_agent_test_run_executor.py  test_agent_test_runs.py  test_agents_api.py  test_any_usage_guardrail.py  test_api_dependencies.py  test_api_service_boundaries.py  test_app.py  test_auth.py  test_auth_api.py  test_auth_middleware.py  test_checkpoints.py  test_config.py  test_create_agent_by_llm_provider.py  test_create_deepagents_by_llm_provider.py  test_graph_runner.py  test_json_types.py  test_llm_model_config.py  test_llm_models.py  test_llm_provider_repository.py  test_llm_provider_repository_unit.py  test_llm_provider_schemas.py  test_llm_providers_api.py  test_llm_tokens.py  test_logging.py  test_mcp_api.py  test_mcp_api_dependencies.py  test_mcp_http_echo_server_script.py  test_mcp_lifespan.py  test_mcp_repository.py  (+32 more)
(+192 files in other folders)
