[project]
name = "change-quality-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.3",
    "greenlet>=3.5.1",
    "langgraph>=1.2.1",
    "langgraph-checkpoint-postgres>=3.1.0",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.fastapi]
entrypoint = "app.main:app"

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "db: tests that require TEST_DATABASE_URL and a local Postgres database",
]
