[project]
name = "change-quality-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "deepagents>=0.6.4",
    "fastapi[standard]>=0.136.3",
    "greenlet>=3.5.1",
    "httpx[socks]>=0.28.1",
    "langchain>=1.0",
    "langchain-deepseek>=1.0.1",
    "langchain-openai>=1.0",
    "langgraph>=1.2.1",
    "langgraph-checkpoint-postgres>=3.1.0",
    "mcp>=1.27.1",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "black>=26.5.1",
    "isort>=8.0.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.15",
]

[tool.fastapi]
entrypoint = "app.main:app"

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "db: tests that require TEST_DATABASE_URL and a local Postgres database",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "ANN"]
ignore = [
    "ANN401", # Allow Any where framework/plugin boundaries are intentionally dynamic.
]

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.bandit]
exclude_dirs = ["tests", ".venv", ".worktrees"]
